[gd_scene load_steps=32 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://texture/knight quest/replay1.png" type="Texture" id=2]
[ext_resource path="res://texture/static/option.png" type="Texture" id=3]
[ext_resource path="res://texture/static/quit.png" type="Texture" id=4]
[ext_resource path="res://texture/static/Pixeled.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://texture/static/menu.png" type="Texture" id=6]
[ext_resource path="res://Sprite.gd" type="Script" id=7]
[ext_resource path="res://texture/static/return1.png" type="Texture" id=8]
[ext_resource path="res://texture/static/continue.png" type="Texture" id=9]
[ext_resource path="res://texture/static/begin.png" type="Texture" id=10]
[ext_resource path="res://texture/static/enemykill.wav" type="AudioStream" id=11]
[ext_resource path="res://texture/static/+.png" type="Texture" id=12]
[ext_resource path="res://texture/static/-.png" type="Texture" id=13]
[ext_resource path="res://texture/knight quest/menu.wav" type="AudioStream" id=14]
[ext_resource path="res://texture/static/fullscrenntrue.png" type="Texture" id=15]
[ext_resource path="res://texture/static/unpause.png" type="Texture" id=16]
[ext_resource path="res://texture/static/keys.png" type="Texture" id=17]
[ext_resource path="res://texture/static/sound.png" type="Texture" id=18]
[ext_resource path="res://base dynamic font.tres" type="DynamicFont" id=19]
[ext_resource path="res://texture/static/blackback.png" type="Texture" id=20]
[ext_resource path="res://textbug.tres" type="DynamicFont" id=21]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 5 )

[node name="menu" type="Node"]
script = ExtResource( 1 )

[node name="start" type="Button" parent="."]
anchor_right = 1.0
margin_left = 471.342
margin_top = 123.515
margin_right = -92.658
margin_bottom = 545.515
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 2 )
flat = true

[node name="option" type="Button" parent="."]
margin_left = 9.00001
margin_top = 508.0
margin_right = 885.0
margin_bottom = 1378.0
rect_scale = Vector2( 0.1, 0.1 )
icon = ExtResource( 3 )
flat = true

[node name="quit" type="Button" parent="."]
margin_left = 483.331
margin_top = 432.298
margin_right = 686.331
margin_bottom = 633.298
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 4 )
flat = true

[node name="start2" type="Label" parent="."]
margin_left = 453.0
margin_top = 199.0
margin_right = 578.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "JOUER"
align = 1

[node name="quit2" type="Label" parent="."]
margin_left = 429.376
margin_top = 500.802
margin_right = 604.376
margin_bottom = 570.802
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUITTER"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512.523, 300.205 )
scale = Vector2( 1.00479, 0.591102 )
z_index = -1
texture = ExtResource( 6 )
vframes = 2
hframes = 2
frame = 3
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/animationmenu = SubResource( 3 )

[node name="_return" type="Button" parent="."]
visible = false
margin_left = 460.944
margin_top = 458.574
margin_right = 856.944
margin_bottom = 848.574
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 8 )
flat = true

[node name="return2" type="Label" parent="."]
visible = false
margin_left = 440.714
margin_top = 533.701
margin_right = 595.714
margin_bottom = 603.701
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RETOUR"

[node name="_continue" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.061
margin_top = -100.675
margin_right = 90.9385
margin_bottom = 289.325
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 9 )
flat = true

[node name="begin" type="Button" parent="."]
visible = false
margin_left = 566.681
margin_top = 223.475
margin_right = 930.681
margin_bottom = 581.476
rect_scale = Vector2( 0.25, 0.25 )
icon = ExtResource( 10 )
flat = true

[node name="begin2" type="Label" parent="."]
visible = false
margin_left = 501.201
margin_top = 318.409
margin_right = 736.201
margin_bottom = 388.409
custom_fonts/font = SubResource( 5 )
text = "COMMENCER"

[node name="continue2" type="Label" parent="."]
visible = false
margin_left = 263.411
margin_top = 315.798
margin_right = 478.411
margin_bottom = 385.798
custom_fonts/font = SubResource( 6 )
text = "CONTINUER"

[node name="title" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -285.0
margin_right = 285.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "KNIGHT QUEST"
align = 1
valign = 1

[node name="sound2" type="Label" parent="."]
visible = false
margin_left = 428.973
margin_top = 135.373
margin_right = 588.973
margin_bottom = 205.373
custom_fonts/font = SubResource( 8 )
text = "VOLUME"

[node name="soundtest" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="bonus" type="Button" parent="."]
visible = false
margin_left = 606.54
margin_top = 151.196
margin_right = 714.54
margin_bottom = 253.196
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 12 )
flat = true

[node name="malus" type="Button" parent="."]
visible = false
margin_left = 359.137
margin_top = 149.786
margin_right = 467.137
margin_bottom = 251.786
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 13 )
flat = true

[node name="menumusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="fullscreen" type="Button" parent="."]
visible = false
margin_left = 450.444
margin_top = 212.091
margin_right = 846.444
margin_bottom = 572.091
rect_scale = Vector2( 0.3, 0.3 )
icon = ExtResource( 15 )
flat = true

[node name="fullscreen2" type="Label" parent="."]
visible = false
margin_left = 389.255
margin_top = 319.198
margin_right = 639.255
margin_bottom = 389.198
custom_fonts/font = SubResource( 9 )
text = "FULLSCREEN"

[node name="pause" type="Button" parent="."]
visible = false
margin_left = 479.796
margin_top = 8.36853
margin_right = 651.796
margin_bottom = 238.369
rect_scale = Vector2( 0.4, 0.4 )
icon = ExtResource( 16 )
flat = true

[node name="control" type="Button" parent="."]
margin_left = 1.948
margin_top = 379.864
margin_right = 1037.95
margin_bottom = 1409.86
rect_scale = Vector2( 0.1, 0.1 )
icon = ExtResource( 17 )
flat = true

[node name="sound" type="Sprite" parent="."]
visible = false
position = Vector2( 513.752, 138.624 )
scale = Vector2( 0.186104, 0.186104 )
texture = ExtResource( 18 )
vframes = 5
hframes = 4

[node name="control2" type="Node" parent="."]

[node name="upbutton" type="Button" parent="control2"]
visible = false
margin_left = 457.245
margin_top = 7.3879
margin_right = 568.245
margin_bottom = 110.388
custom_fonts/font = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acceptbutton" type="Button" parent="control2"]
visible = false
margin_left = 78.245
margin_top = 8.3879
margin_right = 189.245
margin_bottom = 111.388
custom_fonts/font = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftbutton" type="Button" parent="control2"]
visible = false
margin_left = 317.663
margin_top = 148.622
margin_right = 428.663
margin_bottom = 251.622
custom_fonts/font = ExtResource( 19 )

[node name="rightbutton" type="Button" parent="control2"]
visible = false
margin_left = 599.923
margin_top = 148.622
margin_right = 710.923
margin_bottom = 251.622
custom_fonts/font = ExtResource( 19 )

[node name="firebutton" type="Button" parent="control2"]
visible = false
margin_left = 808.696
margin_top = 303.949
margin_right = 919.696
margin_bottom = 406.949
custom_fonts/font = ExtResource( 19 )

[node name="downbutton" type="Button" parent="control2"]
visible = false
margin_left = 453.544
margin_top = 292.383
margin_right = 564.544
margin_bottom = 395.383
custom_fonts/font = ExtResource( 19 )

[node name="pausebutton" type="Button" parent="control2"]
visible = false
margin_left = 807.623
margin_top = 13.4626
margin_right = 918.623
margin_bottom = 116.463
custom_fonts/font = ExtResource( 19 )

[node name="up" type="Label" parent="control2"]
visible = false
margin_left = 462.654
margin_top = 103.635
margin_right = 567.654
margin_bottom = 173.635
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HAUT"

[node name="accept" type="Label" parent="control2"]
visible = false
margin_left = 44.654
margin_top = 95.635
margin_right = 249.654
margin_bottom = 165.635
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ACCEPTER"

[node name="left" type="Label" parent="control2"]
visible = false
margin_left = 297.306
margin_top = 245.6
margin_right = 447.306
margin_bottom = 315.6
custom_fonts/font = SubResource( 10 )
text = "GAUCHE"

[node name="right" type="Label" parent="control2"]
visible = false
margin_left = 587.918
margin_top = 240.59
margin_right = 737.918
margin_bottom = 310.59
custom_fonts/font = SubResource( 10 )
text = "DROITE"

[node name="down" type="Label" parent="control2"]
visible = false
margin_left = 471.005
margin_top = 374.005
margin_right = 576.005
margin_bottom = 444.005
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BAS"

[node name="fire" type="Label" parent="control2"]
visible = false
margin_left = 825.084
margin_top = 395.718
margin_right = 930.084
margin_bottom = 465.718
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FEU"

[node name="pause" type="Label" parent="control2"]
visible = false
margin_left = 800.031
margin_top = 91.7445
margin_right = 925.031
margin_bottom = 161.745
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSE"

[node name="blacktext" type="Sprite" parent="control2"]
visible = false
position = Vector2( 515.431, 303.429 )
scale = Vector2( 33.2144, 19.9643 )
texture = ExtResource( 20 )

[node name="text" type="Label" parent="control2/blacktext"]
margin_left = -15.3876
margin_top = -18.2642
margin_right = 191.612
margin_bottom = 34.7358
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 21 )
text = "APUYEZ 
SUR UNE 
TOUCHE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="start" to="." method="_on_start_mouse_entered"]
[connection signal="mouse_exited" from="start" to="." method="_on_start_mouse_exited"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="option" to="." method="_on_option_mouse_entered"]
[connection signal="mouse_exited" from="option" to="." method="_on_option_mouse_exited"]
[connection signal="pressed" from="option" to="." method="_on_option_pressed"]
[connection signal="mouse_entered" from="quit" to="." method="_on_quit_mouse_entered"]
[connection signal="mouse_exited" from="quit" to="." method="_on_quit_mouse_exited"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="_return" to="." method="_on__return_mouse_entered"]
[connection signal="mouse_exited" from="_return" to="." method="_on__return_mouse_exited"]
[connection signal="pressed" from="_return" to="." method="_on__return_pressed"]
[connection signal="mouse_entered" from="_continue" to="." method="_on__continue_mouse_entered"]
[connection signal="mouse_exited" from="_continue" to="." method="_on__continue_mouse_exited"]
[connection signal="pressed" from="_continue" to="." method="_on__continue_pressed"]
[connection signal="mouse_entered" from="begin" to="." method="_on_begin_mouse_entered"]
[connection signal="mouse_exited" from="begin" to="." method="_on_begin_mouse_exited"]
[connection signal="pressed" from="begin" to="." method="_on_begin_pressed"]
[connection signal="mouse_entered" from="bonus" to="." method="_on_bonus_mouse_entered"]
[connection signal="mouse_exited" from="bonus" to="." method="_on_bonus_mouse_exited"]
[connection signal="pressed" from="bonus" to="." method="_on__pressed"]
[connection signal="mouse_entered" from="malus" to="." method="_on_malus_mouse_entered"]
[connection signal="mouse_exited" from="malus" to="." method="_on_malus_mouse_exited"]
[connection signal="pressed" from="malus" to="." method="_on_malus_pressed"]
[connection signal="finished" from="menumusic" to="." method="_on_menumusic_finished"]
[connection signal="mouse_entered" from="fullscreen" to="." method="_on_fullscreen_mouse_entered"]
[connection signal="mouse_exited" from="fullscreen" to="." method="_on_fullscreen_mouse_exited"]
[connection signal="pressed" from="fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="mouse_entered" from="control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="control" to="." method="_on_control_mouse_exited"]
[connection signal="pressed" from="control" to="." method="_on_control_pressed"]
[connection signal="pressed" from="control2/upbutton" to="." method="_on_upbutton_pressed"]
[connection signal="pressed" from="control2/acceptbutton" to="." method="_on_acceptbutton_pressed"]
[connection signal="pressed" from="control2/leftbutton" to="." method="_on_leftbutton_pressed"]
[connection signal="pressed" from="control2/rightbutton" to="." method="_on_rightbutton_pressed"]
[connection signal="pressed" from="control2/firebutton" to="." method="_on_firebutton_pressed"]
[connection signal="pressed" from="control2/downbutton" to="." method="_on_downbutton_pressed"]
[connection signal="pressed" from="control2/pausebutton" to="." method="_on_pausebutton_pressed"]
